# otus_scoring_api

./: .gitignore  .pre-commit-config.yaml  README.md  api.py  commitlint.config.js  makefile  pyproject.toml  pytest.ini  readme.md
.github/workflows/: ci.yml
tests/: test.py
