[tool.poetry]
name = "otus_scoring_api"
version = "0.1.0"
description = ""
authors = ["akhmadiev <akhmadiev@tax-monitor.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mypy = "^1.19.1"
pytest = "^9.0.2"
pre-commit = "^4.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ["scripts", "docs", "test"]
disable_error_code = ["name-defined"]
explicit_package_bases = true

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pre-commit = "^4.0.1"
yapf = "^0.40.2"

[tool.yapf]
based_on_style = "pep8"
column_limit = 120
continuation_align_style = "VALIGN-RIGHT"
align_closing_bracket_with_visual_indent = true
dedent_closing_brackets = false
split_before_named_assigns = true
split_arguments_when_comma_terminated = true
